# video-editor

./: .gitattributes  .gitignore  .gitmodules  README.md  build.zig  lint.sh  run_ffmpeg_on_save.py  shell.nix  suppressions.valgrind
glad/include/glad/: glad.h
glad/src/: glad.c
miniaudio/: zig_18247.patch
src/: App.zig  AudioRenderer.zig  ClipManager.zig  FrameRenderer.zig  Gui.zig  WavWriter.zig  WordTimestampGenerator.zig  audio.zig  c.zig  decoder.zig  gl_helpers.zig  main.zig  save.zig
src/AudioRenderer/: fragment.glsl  vertex.glsl
src/FrameRenderer/: vertex.glsl
src/Gui/: fragment.glsl
src/gui/: gui.h
src/gui/mock/: mock_gui.c
src/gui/rust/: Cargo.toml  build.rs
src/gui/rust/src/: c_bindings.rs  gl_exports.rs  lib.rs
