[package]
name = "gui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.27.2"

[build-dependencies]
bindgen = "0.65.1"

[profile.dev]
debug = 0

[profile.release]
debug = 0
